major version bumps
spring boot 3 -> 4
tomcat 10 -> tomcat 11
junit 4 -> 5 (mostly)